--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   equatable: ^2.0.5
   webview_flutter: ^3.0.1
   flutter_native_splash: ^2.4.0
+  hive: ^2.2.3
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
